sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: not found: value ischange
	} while ((ecart>1) || ischange)
                              ^